// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading should render Heading component 1`] = `
<Text
  accessibilityRole="header"
  allowFontScaling={false}
  selectable={true}
  style={
    {
      "color": "#303030",
      "fontFamily": "Gelasio-Bold",
      "fontSize": 18,
      "lineHeight": 28,
      "marginBottom": 0,
      "marginLeft": 0,
      "marginRight": 0,
      "marginTop": 0,
    }
  }
  suppressHighlighting={true}
>
  Heading text
</Text>
`;

exports[`Heading should render Heading component with size large 1`] = `
<Text
  accessibilityRole="header"
  allowFontScaling={false}
  selectable={true}
  style={
    {
      "color": "#303030",
      "fontFamily": "Gelasio-Bold",
      "fontSize": 24,
      "lineHeight": 28,
      "marginBottom": 0,
      "marginLeft": 0,
      "marginRight": 0,
      "marginTop": 0,
    }
  }
  suppressHighlighting={true}
>
  Heading text
</Text>
`;
